Added socket.io example

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
